# CS-362-Project

./: .gitignore  ABOUT.md  BUILD.md  CMakeLists.txt  Proposal.md  README.md  SETUP.md  TEST.md
.github/workflows/: cmake-multi-platform.yml
AudioToTxt/: CHANGELOG.MD  CMakeLists.txt  README.md
AudioToTxt/source/: AudioToTxt.cpp  AudioToTxt.h  CMakeLists.txt
AudioToTxt/tests/: CMakeLists.txt
AudioToTxt/tests/audioToText/: CMakeLists.txt
AudioToTxt/tests/test_whisper/: CMakeLists.txt  audioDecoding.cpp  audioDecoding.h  main.cpp
UI/src/src/: ui_file_explorer.h  ui_playlist.h  ui_video_editor.cpp  video_editor.cpp  video_editor.h
UiLayout/: config.h  main.cpp  ui_file_explorer.cpp  ui_main_window.cpp  ui_main_window.h  ui_playlist.cpp  ui_settings.cpp  ui_subtitle_controls.cpp  ui_subtitle_controls.h  ui_video_editor.cpp  ui_video_editor.h
audiolib/: CMakeLists.txt  README.md  documentation.md
audiolib/source/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  audio.cpp  audio.h
audiolib/source/include/VulkanEngine/: audio.h
audiolib/tests/: CMakeLists.txt
audiolib/tests/audioplayback/: CMakeLists.txt  main.cpp
audiolib/tests/convertwav/: CMakeLists.txt  main.cpp
avParser/: CMakeLists.txt  README.md
avParser/source/: AVParser.cpp  AVParser.h  CMakeLists.txt  README.md
avParser/tests/: CMakeLists.txt
avParser/tests/avExtraction/: CMakeLists.txt  main.cpp
avParser/tests/ui_shortcuts/: CMakeLists.txt  main.cpp  my_main.cpp  nfd.h
cmake/Modules/: FindFFmpeg.cmake
docs/: ABOUT.md  INSTALL.md  SETUP.md  TESTING.md
libraries/: CMakeLists.txt
libraries/AudioToTxt/: CMakeLists.txt  README.md
libraries/AudioToTxt/source/: CMakeLists.txt
libraries/AudioToTxt/tests/: CMakeLists.txt
libraries/AudioToTxt/tests/test_whisper/: CMakeLists.txt  audioDecoding.cpp  audioDecoding.h  main.cpp
libraries/audiolib/source/: AudioPlayer.cpp  CMakeLists.txt
libraries/audiolib/tests/audioplayback/: main.cpp
libraries/audiolib/tests/convertwav/: CMakeLists.txt  main.cpp
libraries/avParser/source/: AVParser.cpp  AVParser.h  CMakeLists.txt
libraries/avParser/tests/avExtraction/: main.cpp
libraries/avParser/tests/ui_shortcuts/: main.cpp
libraries/vulkanEngine/: README.md
libraries/vulkanEngine/source/: CMakeLists.txt  VulkanEngine.h  VulkanEngineOptions.h
libraries/vulkanEngine/source/components/: Framebuffer.h  Instance.cpp  LogicalDevice.h  PhysicalDevice.h  SwapChain.cpp  SwapChain.h  Window.cpp
libraries/vulkanEngine/source/pipelines/: GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  RenderPass.h  ShaderModule.cpp  UniformBuffer.cpp  Vertex.h
libraries/vulkanEngine/source/pipelines/custom/: GraphicsPipelineStates.h  VideoPipeline.h
libraries/vulkanEngine/source/utilities/: Buffers.cpp  Images.h
libraries/vulkanEngine/tests/guiWidget/: CMakeLists.txt  main.cpp
libraries/vulkanEngine/tests/sfx/: main.cpp
libraries/vulkanEngine/tests/videoDecode/: CMakeLists.txt  main.cpp
libraries/vulkanEngine/tests/window/: main.cpp
medos/: README.md
medos/source/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h
reports/: 2025-1-29.md  2025-2-12.md  2025-2-19.md  2025-2-26.md  2025-2-5.md  2025-3-5.md  2025_1_15.md  2025_1_22.md
source/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  main.cpp  ui_file_explorer.cpp  ui_main_window.cpp  ui_main_window.h  ui_playlist.cpp  ui_settings.cpp  ui_settings.h  ui_subtitle_controls.cpp  ui_video_editor.h  ui_video_player.cpp  ui_video_player.h
vulkanEngine/: CMakeLists.txt
vulkanEngine/source/: CMakeLists.txt  README.md  VulkanEngine.cpp  VulkanEngine.h  ui_file_explorer.cpp  ui_main_window.cpp  ui_subtitle_controls.cpp  ui_video_player.h
vulkanEngine/source/components/: DebugMessenger.cpp  DebugMessenger.h  Framebuffer.cpp  Framebuffer.h  ImGuiInstance.cpp  ImGuiInstance.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Window.cpp  Window.h
vulkanEngine/source/include/VulkanEngine/: VulkanEngine.h
vulkanEngine/source/include/VulkanEngine/components/: Instance.h
vulkanEngine/source/pipelines/: GraphicsPipeline.cpp  RenderPass.cpp  ShaderModule.h  UniformBuffer.cpp  UniformBuffer.h
vulkanEngine/source/pipelines/custom/: GraphicsPipelineStates.h  GuiPipeline.cpp  GuiPipeline.h  VideoPipeline.cpp  VideoPipeline.h
vulkanEngine/source/shaders/: video.frag  video.vert
vulkanEngine/source/utilities/: Buffers.h  Images.cpp
vulkanEngine/tests/: CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h
vulkanEngine/tests/guiWidget/: CMakeLists.txt  main.cpp
vulkanEngine/tests/sfx/: CMakeLists.txt  main.cpp
vulkanEngine/tests/shortcuts/: CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h  main.cpp
vulkanEngine/tests/videoDecode/: CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h  main.cpp
vulkanEngine/tests/window/: CMakeLists.txt  main.cpp
